--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.1",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
+    "groq-sdk": "^0.22.0",
     "lodash": "^4.17.21",
     "node-fetch": "^3.3.2",
     "qs": "^6.13.1"
